syntax = "proto3";

package message;
option go_package = "./proto;proto";
option php_namespace = "Omy\\Crius\\MessageServer";

message SendSmsRequest {
  string sign = 1;
  string area_code = 2;
  string phone = 3;
  string message = 4;
  string system = 5;
  string message_type = 6;
  string branch_id = 7;
}
message SendSmsResponse {
  int32 error_code = 1;
  string error_message = 2;
}

message CreateSmsTemplateRequest {
  string name = 1;
  string sign = 2;
  string category = 3;
  string category_key = 4;
  string content = 5;
  string status = 6;
}

message CreateSmsTemplateResponse {
  int32 error_code = 1;
  string error_message = 2;
}

message ListSmsTemplateRequest {
  string name = 1;
  string category = 2;
  string category_key = 3;
  string status = 4;
  int32 limit = 5;
  int32 offset = 6;
  string order_by = 7;
  bool with_page = 8;
}

message SmsTemplate {
  string id = 1;
  string name = 2;
  string sign = 3;
  string category = 4;
  string category_key = 5;
  string content = 6;
  string status = 7;
  int64 created_at = 8;
}

message ListSmsTemplateResponse {
  int32 error_code = 1;
  string error_message = 2;
  ListSmsTemplateData data = 3;
}

message ListSmsTemplateData {
  repeated SmsTemplate templates = 1;
  int64 total = 2;
}

message UpdateSmsTemplateRequest {
  string id = 1;
  string name = 2;
  string sign = 3;
  string content = 4;
  string status = 5;
}

message UpdateSmsTemplateResponse {
  int32 error_code = 1;
  string error_message = 2;
}

message ShowSmsTemplateRequest {
  string id = 1;
}

message ShowSmsTemplateResponse {
  int32 error_code = 1;
  string error_message = 2;
  SmsTemplate data = 3;
}

message ChangeSmsTemplateStatusRequest {
    string id = 1;
    string status = 2;
}

message ChangeSmsTemplateStatusResponse {
    int32 error_code = 1;
    string error_message = 2;
    SmsTemplate data = 3;
}